welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:16: error: not found: value estSurorange
	if (estSurorange())
            ^